[gd_scene load_steps=81 format=2]

[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion11.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/Healer.gd" type="Script" id=2]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion7.png" type="Texture" id=3]
[ext_resource path="res://Assets/healer/shadow of storms/run.png" type="Texture" id=4]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion13.png" type="Texture" id=5]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion17.png" type="Texture" id=6]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion15.png" type="Texture" id=7]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion2.png" type="Texture" id=8]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion4.png" type="Texture" id=9]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion18.png" type="Texture" id=10]
[ext_resource path="res://Assets/explosions and impact (extract.me)/impact5/png-sequence/spritesheet_ver1.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion12.png" type="Texture" id=12]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion3.png" type="Texture" id=13]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion16.png" type="Texture" id=14]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion19.png" type="Texture" id=15]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion5.png" type="Texture" id=16]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion10.png" type="Texture" id=17]
[ext_resource path="res://Assets/healer/shadow of storms/idle static 1 frame.png" type="Texture" id=18]
[ext_resource path="res://Assets/healer/shadow of storms/damaged and death.png" type="Texture" id=19]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion14.png" type="Texture" id=20]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion9.png" type="Texture" id=21]
[ext_resource path="res://Assets/Music/Body_damage/Sword hit another sword 9.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/Music/Ghost/Alien Ouch_01.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion8.png" type="Texture" id=24]
[ext_resource path="res://Assets/Music/Ghost/Ghost Death_02.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/healer/shadow of storms/heal charge up.png" type="Texture" id=26]
[ext_resource path="res://Assets/Music/Buff/Buff 17.wav" type="AudioStream" id=27]
[ext_resource path="res://Scenes/Follow_Target.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=29]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Healing"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=20]
states/Die/node = SubResource( 1 )
states/Die/position = Vector2( 123, 0 )
states/Healing/node = SubResource( 2 )
states/Healing/position = Vector2( 325, 318 )
states/Hurt/node = SubResource( 3 )
states/Hurt/position = Vector2( 317, 53 )
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 58, 150 )
states/Run/node = SubResource( 5 )
states/Run/position = Vector2( 857, 99 )
transitions = [ "Idle", "Hurt", SubResource( 6 ), "Hurt", "Idle", SubResource( 7 ), "Hurt", "Die", SubResource( 9 ), "Run", "Idle", SubResource( 10 ), "Idle", "Run", SubResource( 11 ), "Healing", "Idle", SubResource( 12 ), "Healing", "Hurt", SubResource( 15 ), "Run", "Hurt", SubResource( 16 ), "Idle", "Healing", SubResource( 56 ), "Hurt", "Healing", SubResource( 57 ) ]
start_node = "Idle"
end_node = "Die"
graph_offset = Vector2( -231, -60.2147 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="Animation" id=22]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "remove_from_targetable"
}, {
"args": [  ],
"method": "on_died"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("character_audio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 25 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=23]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 53.8174 ),
"update": 1,
"values": [ ExtResource( 26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("character_audio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 27 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_healing"
} ]
}

[sub_resource type="Animation" id=24]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("character_audio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 3.0,
"start_offset": 0.0,
"stream": ExtResource( 23 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_healing"
} ]
}

[sub_resource type="Animation" id=25]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=26]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 5.46416 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="CircleShape2D" id=27]
radius = 79.2921

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 378, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 756, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1134, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1512, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 378, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 756, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1134, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1512, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 378, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 756, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1134, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1512, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 378, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 756, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1134, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1512, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 378, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 756, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1134, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1512, 1512, 378, 378 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 15 ) ],
"loop": true,
"name": "Hit",
"speed": 40.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "New Anim",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 11.2255, 13.3858 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 354.868, 30.9229 )

[node name="Healer" type="KinematicBody2D" groups=[
"Enemy",
"Healer",
]]
position = Vector2( -0.420441, 0.420448 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Follow_Target" parent="." instance=ExtResource( 28 )]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Die = SubResource( 22 )
anims/Healing = SubResource( 23 )
anims/Hurt = SubResource( 24 )
anims/Idle = SubResource( 25 )
anims/Run = SubResource( 26 )

[node name="Animations" type="Sprite" parent="."]
position = Vector2( 0.420441, -27.3291 )
texture = ExtResource( 18 )

[node name="Healing area" type="Area2D" parent="Animations"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animations/Healing area"]
shape = SubResource( 27 )

[node name="Effect" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.707092, -16.2635 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 53 )
animation = "Hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.374588, -1.27466 )
shape = SubResource( 54 )

[node name="damage_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
volume_db = 5.0
max_distance = 1000.0

[node name="character_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
max_distance = 1000.0

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 2.73292, -15.777 )
shape = SubResource( 55 )

[node name="HealthBar" parent="." instance=ExtResource( 29 )]
margin_left = -12.6737
margin_top = -18.8055
margin_right = 30.3263
margin_bottom = -7.80547
[connection signal="body_entered" from="Animations/Healing area" to="." method="_on_Healing_area_body_entered"]
[connection signal="body_exited" from="Animations/Healing area" to="." method="_on_Healing_area_body_exited"]
[connection signal="animation_finished" from="Effect" to="." method="_on_Effect_animation_finished"]
[connection signal="body_entered" from="Vision" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Area2D_body_exited"]
